--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">FinalProject</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="difficulty">Difficulty</string>
+    <string name="gameType">Game Type</string>
+    <string name="go">Go!</string>
 
 </resources>
