--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="startStreak">0</string>
     
     <color name="lightblue">#0085FF</color>
-    <color name="darkblue">#1266B2</color>
+    <color name="darkblue">#0C4EA5</color>
+    <color name="darkerblue">#1266B2</color>
     <color name="green">#9CB200</color>
     <color name="red">#FF0D00</color>
     <color name="orange">#FF6C00</color>
