--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -21,5 +21,6 @@
     <color name="red">#FF0D00</color>
     <color name="orange">#FF6C00</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#AA000000</color>
 
 </resources>
