Added name to menu button

--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">FinalProject</string>
-    <string name="hello_world">Hello world!</string>
+	<string name="developer_name">Developer: Patrick Leopard II</string>
     <string name="action_settings">Settings</string>
     <string name="difficulty">Difficulty</string>
     <string name="gameType">Game Type</string>
