--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">FinalProject</string>
+    <string name="app_name">Quizzie</string>
 	<string name="developer_name">Developer: Patrick Leopard II</string>
+	<string name="legalText">Quizzie 2014</string>
     <string name="action_settings">Settings</string>
     <string name="difficulty">Difficulty</string>
     <string name="gameType">Game Type</string>
@@ -14,7 +15,7 @@
     <string name="startMultiplier">x1</string>
     <string name="startStreak">0</string>
     
-    <color name="lightblue">#0085FF</color>
+    <color name="lightblue">#6766CC</color>
     <color name="darkblue">#0C4EA5</color>
     <color name="darkerblue">#1266B2</color>
     <color name="green">#9CB200</color>
