--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="startScore">0</string>
     <string name="startMultiplier">x1</string>
     <string name="startStreak">0</string>
+    <string name="answer0">Answer 1</string>
+    <string name="answer1">Answer 2</string>
+    <string name="answer2">Answer 3</string>
+    <string name="answer3">Answer 4</string>
+    <string name="questionPlaceholder">Get Ready!</string>
     
     <color name="lightblue">#6766CC</color>
     <color name="darkblue">#0C4EA5</color>
