Updates to game summary screen

--- a/FinalProject/res/values/strings.xml
+++ b/FinalProject/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="answer2">Answer 3</string>
     <string name="answer3">Answer 4</string>
     <string name="questionPlaceholder">Get Ready!</string>
+    <string name="gameSummary">Game Summary</string>
     
     <color name="lightblue">#6766CC</color>
     <color name="darkblue">#0C4EA5</color>
